CHANGES IN FLTK 1.1.8

	- Documentation fixes (STR #1454, STR #1455, STR #1456,
	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578)
	- Avoiding hidden mouse pointer in OS X (STR #1475)
	- Fixed calculation of character widths for OS X
	  Quartz rendering (no STR)
	- Fixed OS X mouse click handling (STR #1504)
	- Added missing GLUT functions so that FLTK can be used
	  as a fairly complete C++ replacement for the original
	  GLUT library (STR #1522)
	- Fl::awake() could block on X11 and OSX (STR #1537)
	- Updated recursive mutex code to run on platforms other
	  than Linux and to do a run-time check to determine
	  whether they are supported by the kernel (STR #1575)
	- WIN32 did check callbacks after the event processing instead of
	  before as documented (STR #1535)
	- Fl_File_Chooser now hides the window before doing a callback
	  when the user clicks on the OK button (STR #1565)
	- Fixed indentation of nested HTML elements (STR #1549)
	- Made layout of Fl_Help_Dialog consistent with other
	  help windows and web browsers.
	- Improved GTK+ schemed round box (STR #1531)
	- Fluid avoids writing unsupported combinations of the 
	  "when()" flags (STR #1501)
	- Fl_Browser_ would allow keyboard callbacks even though
	  "when()" was set to "never" (STR #1501)
	- Added automated little helpers to Sudoku 
	- Added example code for Wizard with the
	  Tabs demo (STR #1564)
	- Optimized Fl_Tabs drawing for speed (STR #1520)
	- OS X resource fork now obsolete (STR #1453)
	- Added chapter 10 about multithreading (STR #1532, 
	  1533)
	- OS X system menu bar itop level attribute support 
	  improved (STR #1505)
	- Fixed Quartz image drawing bug (STR #1438)
	- Fixed Quartz fl_read_image
	- Overlay drawing is now avoiding XOR mode (STR #1438) 
	- Fixed Scroll crash in Fluid Live Mode (STR #1524) 
	- Fixed mousewheel event propagation (STR #1521) 
	- Fixed drawing issues of a tile in a scroll (STR #1507) 
	- Fixed dismissing buttons in menu bars (STR #1494) 